deploy get attendanceRecords by group(21)